--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "hashiconfig",
     "version": "0.0.1",
-    "homepage": "https://hashiconfig.alluvium.cloud",
+    "homepage": "http://hashiconfig.alluvium.cloud",
     "private": true,
     "dependencies": {
         "@emotion/react": "^11.9.0",
