--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
+    "@formkit/nuxt": "^1.0.0-beta.11-db38c2b",
     "nuxt": "3.0.0-rc.11"
   }
 }
